# HRLAnalysis

./: .gitignore  ACKNOWLEDGEMENT  CMakeLists.txt  COPYING  Doxyfile  HRLAnalysisLicense.docx  HRLLog.h  HrlAnalysis.cpp  README
HrlAnalysis/python/: hrlAnalysisPlt.py  hrlAnalysisPlt_biggles.py  hrlAnalysisPlt_display.py  hrlAnalysisPlt_gnuplot.py  overlayedActivity.py  overlayedBurstActivity.py  runAnalysis.py  runAnalysisGNUPlotRaster.py  runAnalysisOptParse.py  runRatAnalysis.py  runSpikeRasters.py
HrlAnalysis/results/: .svnignore
HrlAnalysis/test/: testHRLAnalysis.py  testHRLNetwork.py  testNeoInterface.py
HrlNetworkAnalysis/: HrlNetworkAnalysis.cpp  HrlNetworkAnalysis.h
HrlNeuralAnalysis/: BurstInfo.h  CellRateBinInfo.h  CellRateInfo.h  CorrelationInfo.h  CovInfo.h  HrlAnalysisUtilities.cpp  HrlAnalysisUtilities.h  HrlNeuralAnalysis.cpp  HrlNeuralAnalysis.h  HrlNeuralAnalysisHRLSim.cpp  HrlNeuralAnalysisHRLSim.h  HrlNeuralAnalysisVoltage.cpp  HrlNeuralAnalysisVoltage.h  IsiInfo.h  NeuronParams.h  PopFilterInfo.h  RasterInfo.h  RateBinInfo.h  RateInfo.h  SynchronyInfo.cpp  SynchronyInfo.h  VoltageInfo.h
test/: CMakeLists.txt  TestSuite.cpp
test/AnalysisData/: AnalysisData.cpp  AnalysisData.h
test/AnalysisTest/: AnalysisTest.cpp  AnalysisTest.h
test/SpikeAnalysisAccess/: SpikeAnalysisAccess.cpp  SpikeAnalysisAccess.h
test/burstExample/: burst.c  readme
test/data/: README
test/data/CA1/: CA1_1_spikes.out
test/data/Network/: networkAnalysisConfig.py  pyNet.dot
test/data/RAT/: data-06020601.txt  pos-06020601.txt
test/data/burstAnalysis/normal/: sim.cfg
test/data/burstAnalysis/normal/Data/: analysisConfig.py
test/lib/: CMakeLists.txt  TestLibrary.cpp
test/python/: analysisConfig.py
test/scripts/: quick_raster_out.m  run_test_analysis.m
